fix(src): Fixed namespacing which caused compile issues
Fixed issues with namespacing that was causing compile issue in near production systems

--- a/test/manual/src/initial.css
+++ b/test/manual/src/initial.css
@@ -1,4 +1,4 @@
 .initial-css {
-  background: red;
+  background: blue;
 }
 
